core/roboconf-core/src/test/resources/configurations/invalid/instances-with-inexisting-import.instances

instance of VM {
	name: toto;
}

import it-does-not-exist;
